apps/linkding/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  labels:
    app.kubernetes.io/name: linkding
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.46.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-data
