apps/linkding/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  labels:
    app.kubernetes.io/name: linkding
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: linkding
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: http
