apps/linkding/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://linkding.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Bookmark manager
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: linkding.png
    gethomepage.dev/name: Linkding
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linkding.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: linkding
          port: http
  tls: {}
